Added a vertical offset position changer for the side bar elements.